fix the images' with to 100% on small screen sizes

--- a/main.css
+++ b/main.css
@@ -123,7 +123,7 @@ ul {
   margin: 10px 0;
 }
 
-.opinion-section .opinion-img {
+.the-debate .opinion-img {
   width: 142px;
   height: 95px;
 }
